--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: 꼭사요 # the main title
+title: 어떻게 아셨어요? # the main title
 
-tagline: 놓치면없어짐, 지금사, 나중엔없어, 최저가 # it will display as the sub-title
+tagline: 놓치면없어짐, 지금구매, 나중엔없어, 최저가 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   쇼핑, 핫아이템, SNS유명한, 할인정보
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url:  "https://munn20rod.github.io"
+url:  "https://florentino43.github.io"
 
 github:
   username:  # change to your github username
